# redistricting-portfolio

./: .gitignore  README.md  config.example.yaml  pyproject.toml
apps/web/: package-lock.json  package.json  tsconfig.json
apps/web/components/: LoadingOverlay.tsx  MapView 2.tsx  MapView.tsx  Sidebar.tsx  TopNav.tsx
apps/web/pages/: _app 2.tsx  _app.tsx  about.tsx  in-action.tsx  index 2.tsx  index.tsx
apps/web/public/data/: district_stats.json
apps/web/public/outputs/: states.json
apps/web/public/outputs/il/: latest.json
apps/web/public/outputs/il/current_congress_20260228_201437/: district_stats.csv  district_stats.json  districts.geojson  unit_to_district.csv
apps/web/public/outputs/il/hillclimb_dem_20260301_183125/: district_stats.csv  district_stats.json  districts.geojson  unit_to_district.csv
apps/web/public/outputs/ny/: latest.json
apps/web/styles/: globals.css
raw-data/: precinct_population_join.py  util_print.py  utils_adjacency_plot.py
raw-data/ny_2024_gen_prec/: README.txt
scripts/: build_map_pack.py  export_run.py  inspect_map_pack.py  inspect_precinct_shapefile.py  inspect_shapefile.py  preview_map_pack.py  run.py  run_current_congress_map.py  run_custom_algo.py  run_greedy_pack.py  run_greedy_pack_v2.py  run_hillclimber.py  run_kmeans_pack.py  util_get_titles.py
src/gerry/algos/: custom_algo.py  district_by_real_map.py  greedy_packing.py  hillclimber.py  kmeans_postprocess_contig.py  kmeans_softcap.py  pack_sinks.py  pack_sinks_pop_no_con.py  postprocess_contig.py
src/gerry/data/: map_pack 2.py
src/gerry/viz/: frame_recorder.py
(+28 files in other folders)
